# desktop_agent

./: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: 安全架构设计.md  接口设计.md  数据存储设计.md  系统架构设计.md  部署架构设计.md  需求文档.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  cli.rs  config.rs  error.rs  main.rs  plugin.rs
src-tauri/src/core/: app.rs  event_bus.rs  mod.rs  state.rs  tray.rs
src-tauri/src/core/commands/: config.rs  file.rs  mod.rs  skill.rs  system.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/migrations/: m001_initial_schema.rs  m002_add_skill_checksum.rs  m003_add_user_roles.rs  m004_add_task_metadata.rs  mod.rs
src-tauri/src/database/repositories/: log_repository.rs  mod.rs  session_repository.rs  skill_repository.rs  task_repository.rs  user_repository.rs
src-tauri/src/dialog/: command.rs  engine.rs  intent.rs  mod.rs  session.rs
src-tauri/src/market/: mod.rs
src-tauri/src/platform/: adapter.rs  feishu.rs  filesystem.rs  mod.rs  wecom.rs
src-tauri/src/queue/: mod.rs
src-tauri/src/security/: audit.rs  encryption.rs  input_validator.rs  mod.rs  rate_limiter.rs  sanitizer.rs  webhook.rs
src-tauri/src/security/rbac/: mod.rs
src-tauri/src/services/: backup_service.rs  data_service.rs  file_service.rs  mod.rs  network_service.rs  system_service.rs  text_service.rs
src-tauri/src/skill/: engine.rs  executor.rs  loader.rs  manifest.rs  mod.rs  permissions.rs  sandbox.rs  types.rs
src-tauri/src/utils/: cache.rs  mod.rs  perf.rs
src/components/: Layout.tsx  LogViewer.tsx
src/pages/: Dashboard.tsx  Market.tsx  Monitor.tsx  Settings.tsx  Skills.tsx
