[workspace]
members = [
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Desktop Agent Team"]
license = "MIT"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace.dependencies]
# Tauri
tauri = { version = "1.5", features = [] }
tauri-build = { version = "1.5", features = [] }

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Configuration
serde_yaml = "0.9"
dirs = "5.0"

# Security
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
keyring = "2.3"

# HTTP
hyper = { version = "1.0", features = ["full"] }
hyper-tls = "0.6"
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
glob = "0.3"
walkdir = "2.4"
